fixed text align

--- a/css/styles.css
+++ b/css/styles.css
@@ -602,6 +602,12 @@ img {
   margin-bottom: 8px;
 }
 
+@media screen and (min-width: 768px) {
+  .advantages-subheading {
+    text-align: left;
+  }
+}
+
 @media screen and (min-width: 1158px) {
   .advantages-subheading {
     font-size: 20px;
@@ -915,7 +921,7 @@ img {
 }
 
 .subscribe-input {
-  width: 264px;
+  width: 398px;
   height: 40px;
   border-radius: 4px;
   border: 1px solid var(--white);
@@ -926,6 +932,12 @@ img {
   letter-spacing: 0.04em;
   color: var(--white);
   padding-left: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .subscribe-input {
+    width: 264px;
+  }
 }
 
 .subscribe-input::placeholder {
@@ -1158,7 +1170,7 @@ FILTER */
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 408px;
+  width: 392px;
   min-height: 584px;
   padding-top: 72px;
   padding-right: 24px;
@@ -1169,6 +1181,12 @@ FILTER */
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
+  }
 }
 
 .close-btn {
